Change navigation position to fixed and update z-index

--- a/home.css
+++ b/home.css
@@ -649,11 +649,11 @@ height: 200px;
   .navigation {
     /* grid-column: 1/4; */
     justify-self: start;
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     background: linear-gradient(109.6deg, rgb(36, 45, 57) 11.2%, rgb(16, 37, 60) 51.2%, rgb(0, 0, 0) 98.6%);
-    z-index: 2;
+    z-index: 100;
     height: 0;
     width: 100vw;
     overflow: hidden;
